--- a/index.html
+++ b/index.html
@@ -55,23 +55,33 @@
                 --dracula-d8: #30313a;
                 --dracula-d9: #32333c;
             }
-            card-501 { display: block; position: relative; top: 80px; left: 80px; width: 350px; height: 150px; margin: 8px; border-radius: 24px; border: #0005 3px solid; background: var(--ceo-d0); }
+            card-501 { display: block; overflow-x: hidden; position: relative; top: 80px; left: 80px; width: 550px; height: 250px; margin: 8px; border-radius: 24px; border: #0005 3px solid; background: var(--ceo-d0); }
             ab-501 { display: block; position: absolute; top: 0; left: 0; width: 100%; height: 30px; background: var(--ceo-c5); }
             bl-501 { display: block; position: absolute; top: 0; left: 0; width: 30px; height: 100%; background: var(--ceo-c5); }
-            dw-501 { display: block; position: absolute; top: 0; left: 30px; width: 30px; height: 100%; background: var(--ceo-c5); }
-            hm-501 { display: block; width: 50%; height: 50%; background: var(--ceo-d1); }
+            dw-501 { display: block; position: absolute; top: 0; left: 30px; width: 70px; height: 100%; background: var(--ceo-c5); }
+            hm-501 { display: block; width: 79%; height: 50%; padding: 16px; color: #ccc; position: absolute; top: 30px; left: 100px; margin: 8px; background: var(--ceo-d1); }
+            .input-501 { background: var(--ceo-d9); border: none; width: 100%; height: 3ch; }
 
-            card-305 { display: block; position: relative; top: 80px; left: 80px; width: 350px; height: 150px; margin: 8px; border-radius: 24px; border: #0005 3px solid; background: var(--ceo-d0); }
+            card-305 { display: block; overflow-x: hidden; position: relative; top: 80px; left: 80px; width: 550px; height: 250px; margin: 8px; border-radius: 24px; border: #0005 3px solid; background: var(--ceo-d0); }
             ab-305 { display: block; position: absolute; top: 0; left: 0; width: 100%; height: 30px; background: var(--ceo-c3); }
             bl-305 { display: block; position: absolute; top: 0; left: 0; width: 30px; height: 100%; background: var(--ceo-c3); }
-            dw-305 { display: block; position: absolute; top: 0; left: 30px; width: 30px; height: 100%; background: var(--ceo-c5); }
-            hm-305 { display: block; width: 50%; height: 50%; background: var(--ceo-d5); }
+            dw-305 { display: block; position: absolute; top: 0; left: 30px; width: 70px; height: 100%; background: var(--ceo-c5); }
+            hm-305 { display: block; width: 79%; height: 50%; padding: 16px; color: #ccc; position: absolute; top: 30px; left: 100px; margin: 8px; background: var(--ceo-d5); }
+            .input-305 { background: var(--ceo-d9); border: none; width: 100%; height: 3ch; }
+
+            card-305-2 { display: block; overflow-x: hidden; position: relative; top: 80px; left: 80px; width: 550px; height: 250px; margin: 8px; border-radius: 24px; border: #0005 3px solid; background: var(--dracula-d0); }
+            ab-305-2 { display: block; position: absolute; top: 0; left: 0; width: 100%; height: 30px; background: var(--dracula-c3); }
+            bl-305-2 { display: block; position: absolute; top: 0; left: 0; width: 30px; height: 100%; background: var(--dracula-c3); }
+            dw-305-2 { display: block; position: absolute; top: 0; left: 30px; width: 70px; height: 100%; background: var(--dracula-c5); }
+            hm-305-2 { display: block; width: 79%; height: 50%; padding: 16px; color: #ccc; position: absolute; top: 30px; left: 100px; margin: 8px; background: var(--dracula-d5); }
+            .input-305-2 { background: var(--dracula-d9); border: none; width: 100%; height: 3ch; }
             
-            card-35015 { display: block; position: relative; top: 80px; left: 80px; width: 350px; height: 150px; margin: 8px; border-radius: 24px; border: #0005 3px solid; background: var(--ceo-d0); }
+            card-35015 { display: block; overflow-x: hidden; position: relative; top: 80px; left: 80px; width: 550px; height: 250px; margin: 8px; border-radius: 24px; border: #0005 3px solid; background: var(--ceo-d0); }
             ab-35015 { display: block; position: absolute; top: 0; left: 0; width: 100%; height: 30px; background: var(--ceo-c3); }
             bl-35015 { display: block; position: absolute; top: 0; left: 0; width: 30px; height: 100%; background: var(--ceo-c3); }
-            dw-35015 { display: block; position: absolute; top: 0; left: 30px; width: 30px; height: 100%; background: var(--ceo-c5); }
-            hm-35015 { display: block; width: 50%; height: 50%; background: var(--ceo-d1); }
+            dw-35015 { display: block; position: absolute; top: 0; left: 30px; width: 70px; height: 100%; background: var(--ceo-c5); }
+            hm-35015 { display: block; width: 79%; height: 50%; padding: 16px; color: #ccc; position: absolute; top: 30px; left: 100px; margin: 8px; background: var(--ceo-d1); }
+            .input-35015 { background: var(--ceo-d9); border: none; width: 100%; height: 3ch; }
         </style>
 		<!-- [ GTag ] ==================================================== -->
 		<!-- [ FBPixel ] ================================================= -->
@@ -93,19 +103,37 @@
                 <ab-501></ab-501>
                 <bl-501></bl-501>
                 <dw-501></dw-501>
-                <hm-501></hm-501>
+                <hm-501>
+                    <h1>Título</h1>
+                    <input class="input-501" type="text">
+                </hm-501>
             </card-501>
             <card-305>
                 <ab-305></ab-305>
                 <bl-305></bl-305>
                 <dw-305></dw-305>
-                <hm-305></hm-305>
+                <hm-305>
+                    <h1>Título</h1>
+                    <input class="input-305" type="text">
+                </hm-305>
             </card-305>
+            <card-305-2>
+                <ab-305-2></ab-305-2>
+                <bl-305-2></bl-305-2>
+                <dw-305-2></dw-305-2>
+                <hm-305-2>
+                    <h1>Título</h1>
+                    <input class="input-305-2" type="text">
+                </hm-305-2>
+            </card-305-2>
             <card-35015>
                 <ab-35015></ab-35015>
                 <bl-35015></bl-35015>
                 <dw-35015></dw-35015>
-                <hm-35015></hm-35015>
+                <hm-35015>
+                    <h1>Título</h1>
+                    <input class="input-35015" type="text">
+                </hm-35015>
             </card-35015>
 
         </home>
